# ChangeLog for media-gfx/hugin
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/hugin/ChangeLog,v 1.92 2010/05/25 21:15:42 pacho Exp $

  25 May 2010; Pacho Ramos <pacho@gentoo.org> hugin-2010.0.0.ebuild:
  stable amd64, bug 320411

  24 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  hugin-2010.0.0.ebuild:
  x86 stable wrt bug #320411

  24 May 2010; <nixnut@gentoo.org> hugin-2010.0.0.ebuild:
  ppc stable #320411

  28 Mar 2010; Markus Meier <maekke@gentoo.org> hugin-2010.0.0.ebuild:
  add pkgconfig to DEPEND by Nikoli in bug #311693

*hugin-2010.0.0 (26 Mar 2010)

  26 Mar 2010; Markus Meier <maekke@gentoo.org> -hugin-2010.0.0_rc1.ebuild,
  +hugin-2010.0.0.ebuild:
  bump to final 2010.0.0 release, remove rc version

  10 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  hugin-2010.0.0_rc1.ebuild, +files/hugin-2010.0.0_rc1-libpng14.patch:
  Fix building with libpng14.

*hugin-2010.0.0_rc1 (07 Mar 2010)

  07 Mar 2010; Markus Meier <maekke@gentoo.org> +hugin-2010.0.0_rc1.ebuild:
  version bump to 2010.0.0_rc1

  17 Feb 2010; Markus Meier <maekke@gentoo.org> hugin-2009.4.0.ebuild:
  add virtual/glut to dependencies by Seerp in bug #305049

  09 Jan 2010; Markus Meier <maekke@gentoo.org>
  -files/hugin-0.7.0-gcc44.patch, -files/hugin-0.7.0_rc2-as-needed.patch,
  -hugin-0.8.0.ebuild, -files/hugin-0.8.0_rc3-as-needed.patch,
  -files/hugin-0.8.0_rc4-use_system_cmake_findboost.patch:
  old

  07 Jan 2010; Brent Baude <ranger@gentoo.org> hugin-2009.2.0.ebuild:
  Marking hugin-2009.2.0 ppc for bug 294316

  20 Dec 2009; Olivier Crête <tester@gentoo.org> hugin-2009.2.0.ebuild:
  Stable on amd64, bug #294316

  16 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  hugin-2009.2.0.ebuild:
  stable x86, bug 294316

*hugin-2009.4.0 (16 Dec 2009)

  16 Dec 2009; Markus Meier <maekke@gentoo.org> -hugin-2009.4.0_rc1.ebuild,
  -hugin-2009.4.0_rc2.ebuild, -hugin-2009.4.0_rc3.ebuild,
  +hugin-2009.4.0.ebuild: