@@ -7,10 +7,6 @@
 			use <pkg>media-gfx/autotrace</pkg> to convert bitmaps into vector
 			graphics
 		</flag>
-		<flag name='corefonts'>
-			pull in <pkg>media-fonts/corefonts</pkg>, which is required for some
-			commands
-		</flag>
 		<flag name='fpx'>
 			enable <pkg>media-libs/libfpx</pkg> support
 		</flag>
