@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/imagemagick
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.401 2010/05/25 21:16:36 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.402 2010/05/27 10:47:15 maekke Exp $
+
+  27 May 2010; Markus Meier <maekke@gentoo.org> -imagemagick-6.5.8.8.ebuild:
+  old
 
   25 May 2010; Pacho Ramos <pacho@gentoo.org> imagemagick-6.6.1.2.ebuild:
   stable amd64, bug 319195
